--- a/other/calc2-review/index.html
+++ b/other/calc2-review/index.html
@@ -675,7 +675,7 @@
 <p>Recall that for an object, if the force applied is in the same direction as its displacement, then the work done by the force is given by:</p>
 <div class="arithmatex">\[W = \int_{a}^{b} F \hspace{0.2cm} dx\]</div>
 <p>We will use this formula to evaluate the work done by a spring. To do so, we need Hooke's Law, which states that <span class="arithmatex">\(F_{spring} = -kx\)</span>, where <span class="arithmatex">\(k\)</span> is the stiffness of the spring and <span class="arithmatex">\(x\)</span> is the displacement of its ends from equilibrium. To get a visual understanding of how springs work again, consider the diagram below: </p>
-<p style="text-align:center;"><img src="../../assets/images/hookeslaw.png" alt="Hooke's Law" width="200"/></p>
+<p style="text-align:center;"><img src="../../assets/images/hookeslaw.PNG" alt="Hooke's Law" width="200"/></p>
 
 <p>For all of these questions, we will assume that the spring is ideal - the spring will have no mass, weight, or damping losses. The spring will have <span class="arithmatex">\(k = 100 \hspace{0.2cm} N/m\)</span>.</p>
 <h4 id="questions">Questions</h4>
@@ -725,7 +725,7 @@
 <p>Note that the equation of a circle with the origin located at <span class="arithmatex">\((0,0)\)</span> is given by:</p>
 <div class="arithmatex">\[x^2 + y^2 = r^2\]</div>
 <p>It is possible to derive both the area and circumference of a circle from this equation only using integral calculus, but it requires spliting the circle into its upper (<span class="arithmatex">\(y \geq 0\)</span>) and lower (<span class="arithmatex">\(y&lt;0\)</span>) counterparts and then integrating on <span class="arithmatex">\(x\)</span>. This is known as the semicircle method. </p>
-<p style="text-align:center;"><img src="../../assets/semicircle.PNG" alt="Semi Circle" width="400"/></p>
+<p style="text-align:center;"><img src="../../assets/images/semicircle.PNG" alt="Semi Circle" width="400"/></p>
 
 <p>For reference, the arc length of a curve <span class="arithmatex">\(f(x)\)</span> between <span class="arithmatex">\(a\)</span> and <span class="arithmatex">\(b\)</span> is given by:</p>
 <div class="arithmatex">\[s = \int_{a}^{b} \sqrt{1+(f'(x))^2 } \hspace{0.3cm} dx \]</div>
